system preferences dark mode fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,12 +18,6 @@ html, body, :root {
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 @custom-variant dark (&:where(.dark, .dark *));
 
